Update kit/advanced/advanced-routing.mdx, kit/advanced/hooks.mdx, kit/advanced/errors.mdx
Closes #14
Closes #16

--- a/src/content/docs/kit/advanced/advanced-routing.mdx
+++ b/src/content/docs/kit/advanced/advanced-routing.mdx
@@ -95,7 +95,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 ## Сопоставление
 
-Маршрут вроде `src/routes/fruits/[page]` будет соответствовать `/fruits/apple`, но он также будет соответствовать `/fruits/rocketship`. Мы этого не хотим. Вы можете убедиться, что параметры маршрута правильно сформированы, добавив _матчер_ («сопоставитель») — который принимает строковое значение параметра (`"apple"` или `"rocketship"`) и возвращает `true`, если оно допустимо — в ваш каталог [`params`](https://svelte.dev/docs/kit/configuration#files):
+Маршрут вроде `src/routes/fruits/[page]` будет соответствовать `/fruits/apple`, но он также будет соответствовать `/fruits/rocketship`. Мы этого не хотим. Вы можете убедиться, что параметры маршрута правильно сформированы, добавив _матчер_ («сопоставитель») — который принимает строковое значение параметра (`"apple"` или `"rocketship"`) и возвращает `true`, если оно допустимо — в ваш каталог `src/params`:
 
 <Tabs syncKey="lang">
   <TabItem label="JS">
