--- a/src/content/docs/kit/advanced/hooks.mdx
+++ b/src/content/docs/kit/advanced/hooks.mdx
@@ -14,10 +14,6 @@ sidebar:
 
 Код в этих модулях выполняется при запуске приложения, что делает их полезными для инициализации клиентов баз данных и тому подобного.
 
-:::note
-Вы можете настроить расположение этих файлов с помощью [`config.kit.files.hooks`](https://svelte.dev/docs/kit/configuration#files).
-:::
-
 ## Серверные хуки
 
 В файл `src/hooks.server.js` можно добавить следующие хуки:
@@ -298,11 +294,11 @@ export const getTodo = query(v.string(), (id) => {
 Если во время загрузки, рендеринга или в эндпойнте возникает [неожиданная ошибка](/kit/advanced/errors/#неожиданные-ошибки), эта функция будет вызвана с параметрами `error`, `event`, кодом статуса `status` и сообщением `message`. Это позволяет делать две вещи:
 
 - регистрировать (логировать) ошибку
-- генерировать пользовательское представление ошибки, безопасное для показа пользователям и не содержащее чувствительных деталей, таких как сообщения и стек-трейсы. Возвращаемое значение (по умолчанию `{ message }`) становится значением `$page.error`.
+- генерировать пользовательское представление ошибки, безопасное для показа пользователям и не содержащее чувствительных деталей, таких как сообщения и стек-трейсы. Возвращаемое значение (по умолчанию `{ message }`) становится значением `page.error`.
 
 Для ошибок, выброшенных из вашего кода (или кода библиотек, вызываемого вашим кодом), статус будет 500, а сообщение — `Internal Error`. Хотя `error.message` может содержать чувствительную информацию, которую нельзя показывать пользователям, значение `message` безопасно (хотя и малополезно для обычного пользователя).
 
-Чтобы типобезопасно добавить дополнительную информацию в объект `$page.error`, вы можете настроить ожидаемую форму, объявив интерфейс `App.Error` (он обязательно должен включать `message: string`, чтобы гарантировать разумное поведение по умолчанию). Это позволит, например, добавить идентификатор отслеживания, который пользователи смогут указывать при обращении в вашу техническую поддержку:
+Чтобы типобезопасно добавить дополнительную информацию в объект `page.error`, вы можете настроить ожидаемую форму, объявив интерфейс `App.Error` (он обязательно должен включать `message: string`, чтобы гарантировать разумное поведение по умолчанию). Это позволит, например, добавить идентификатор отслеживания, который пользователи смогут указывать при обращении в вашу техническую поддержку:
 
 ```ts
 // src/app.d.ts
